--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -1,5 +1,5 @@
 {% extends 'myapp/base.html' %}
 {% load static %}
 {% block  contant %}
-<h1 class="text-center"> My resume</h1>
+<h1 class="text-center"> My resume helo bother</h1>
 {% endblock contant %}
